# api/app/schemas/users.js
@@ -1,0 +1,22 @@
+import Joi from 'joi'
+
+import { Roles } from '#constants/roles.js'
+
+export default {
+  invite: Joi.object({
+    emails: Joi.array().items(Joi.string().email()).min(1).required().messages({
+      'array.min': 'Emails are required and must be a non-empty array.',
+      'string.email': 'Each email must be a valid email address.',
+    }),
+    role: Joi.string().valid(Roles.INSTRUCTOR, Roles.STUDENT).required().messages({
+      'any.only': 'Invalid invite type. Must be either STUDENT or INSTRUCTOR.',
+    }),
+    projectId: Joi.when('role', {
+      is: Roles.STUDENT,
+      then: Joi.string().required().messages({
+        'any.required': 'Project ID is required for student invitations.',
+      }),
+      otherwise: Joi.optional(),
+    }),
+  }),
+}
